# duke_hf

./: download_demo.sh  main.py  pyproject.toml  requirements-colab.txt  train.ipynb  upload_demo.sh
.github/workflows/: hf-sync.yml
cat_data_cluster/: categorical_clustering.py
downloaded/: demo_data.jsonl
notebooks/: train.ipynb  train.ipynb.bak
